# Ikarus_Teleop

./: .gitmodules  README.md
ikarus_description/: CMakeLists.txt  package.xml
ikarus_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
ikarus_description/meshes/: bearinginner_link9R_1.stl  bearingleft_link16R_1.stl  bearingouter_link10R_1.stl  bearingright_link14R_1.stl  (+10 more)
ikarus_half_description/: CMakeLists.txt  package.xml
ikarus_half_description/launch/: display.launch.py
ikarus_half_description/meshes/: baringattacher_link8R_1.stl  handconnector_link21R_1.stl  icarus_connector_linkL_1.stl  icarus_connector_linkR_1.stl  innerbearing_link20R_1.stl  motor3_link6R_1.stl  outerbearing_link18R_1.stl  uaconnector_link4R_1.stl
ikarus_half_description/urdf/: ikarus_half.gv  ikarus_half.urdf
ikarus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ikarus_moveit_config/config/: ikarus_simplified.ros2_control.xacro  ikarus_simplified.srdf  ikarus_simplified.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo.yaml
ikarus_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ikarus_moveit_config/scripts/: joint_state_to_array.py  openteach_to_twist.py  servo_twist_test.py  test_twist.py
ikarus_simplified_description/: CMakeLists.txt  package.xml
teleop/: ikarus_ik.py
(+13 files in other folders)
